--- a/Frondendmonitoring/Frondendmonitoring.csproj
+++ b/Frondendmonitoring/Frondendmonitoring.csproj
@@ -6,4 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.5" />
+      <PackageReference Include="MudBlazor" Version="8.6.0" />
+    </ItemGroup>
+
 </Project>
