--- a/.github/workflows/Azure.yaml
+++ b/.github/workflows/Azure.yaml
@@ -32,8 +32,16 @@ jobs:
             echo "❌ Secret 'AZURE_SUBSCRIPTION_ID' is missing!"
             exit 1
           fi
+          if [ -z "${{ secrets.AZURE_CLIENT_SECRET }}" ]; then
+            echo "❌ Secret 'AZURE_CLIENT_SECRET' is missing!"
+            exit 1
+          fi
           if [ -z "${{ secrets.WEBAPI_PROJECT_NAME }}" ]; then
             echo "❌ Secret 'WEBAPI_PROJECT_NAME' is missing!"
+            exit 1
+          fi
+          if [ -z "${{ secrets.AZURE_WEBAPP_NAME }}" ]; then
+            echo "❌ Secret 'AZURE_WEBAPP_NAME' is missing!"
             exit 1
           fi
 
@@ -76,7 +84,6 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write
       contents: read
 
     steps:
@@ -86,12 +93,13 @@ jobs:
           name: ${{ env.ARTIFACT_NAME }}
           path: ${{ env.PUBLISH_DIRECTORY }}
 
-      - name: Azure Login (OIDC)
-        uses: azure/login@v2
+      - name: Azure Login (Client Secret)
+        uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
