--- a/.github/workflows/Azure.yaml
+++ b/.github/workflows/Azure.yaml
@@ -82,9 +82,8 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      contents: read
+      contents: read  # ⛔ DO NOT include "id-token: write" here
 
     steps:
       - name: Download artifact
@@ -94,7 +93,7 @@ jobs:
           path: ${{ env.PUBLISH_DIRECTORY }}
 
       - name: Azure Login (Client Secret)
-        uses: azure/login@v1
+        uses: azure/login@v1  # ✅ Use v1 not v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
