--- a/.github/workflows/Azure.yaml
+++ b/.github/workflows/Azure.yaml
@@ -81,9 +81,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: Production
     permissions:
-      contents: read  # ⛔ DO NOT include "id-token: write" here
+      contents: read      # no id-token here
 
     steps:
       - name: Download artifact
@@ -92,9 +92,10 @@ jobs:
           name: ${{ env.ARTIFACT_NAME }}
           path: ${{ env.PUBLISH_DIRECTORY }}
 
-      - name: Azure Login (Client Secret)
-        uses: azure/login@v1  # ✅ Use v1 not v2
+      - name: Azure Login (Service Principal)
+        uses: azure/login@v2
         with:
+          auth-type: service_principal
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
@@ -105,5 +106,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-          slot-name: 'Production'
+          slot-name: Production
           package: ${{ env.PUBLISH_DIRECTORY }}
+        
