--- a/.github/workflows/Azure.yaml
+++ b/.github/workflows/Azure.yaml
@@ -83,7 +83,8 @@ jobs:
     environment:
       name: Production
     permissions:
-      contents: read      # no id-token here
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact
@@ -92,14 +93,12 @@ jobs:
           name: ${{ env.ARTIFACT_NAME }}
           path: ${{ env.PUBLISH_DIRECTORY }}
 
-      - name: Azure Login (Service Principal)
+      - name: Azure Login (OIDC)
         uses: azure/login@v2
         with:
-          auth-type: service_principal
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
