--- a/FrontendMonitoring/FrontendMonitoring.csproj
+++ b/FrontendMonitoring/FrontendMonitoring.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.5" />
+      <PackageReference Include="Microsoft.CodeCoverage" Version="17.14.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
       <PackageReference Include="MudBlazor" Version="8.6.0" />
     </ItemGroup>
 
