--- a/frontendMonitoringUnittesten/frontendMonitoringUnittesten.csproj
+++ b/frontendMonitoringUnittesten/frontendMonitoringUnittesten.csproj
@@ -5,11 +5,17 @@
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-    </PropertyGroup>
-
-    <ItemGroup>
+    </PropertyGroup>    <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
         <PackageReference Include="MSTest" Version="3.6.4"/>
+        <PackageReference Include="Moq" Version="4.20.70"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.0"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1"/>
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.1"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\FrontendMonitoring\FrontendMonitoring.csproj" />
     </ItemGroup>
 
     <ItemGroup>
