--- a/FrontendMonitoring/appsettings.Development.json
+++ b/FrontendMonitoring/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ApiBaseUrl": "https://bitbybitwebapi.azurewebsites.net"
+  "ApiBaseUrl": "https://bitbybit-api--0000005.orangecliff-c30465b7.northeurope.azurecontainerapps.io/"
 }
