--- a/FrontendMonitoring/FrontendMonitoring.csproj
+++ b/FrontendMonitoring/FrontendMonitoring.csproj
@@ -9,6 +9,10 @@
       <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.5" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
       <PackageReference Include="MudBlazor" Version="8.6.0" />
     </ItemGroup>
