map toegevoegd, ux nog niet gedaan, en pins erop gekregen

--- a/FrontendMonitoring/appsettings.Development.json
+++ b/FrontendMonitoring/appsettings.Development.json
@@ -2,8 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ApiBaseUrl": "https://bitbybit-api.orangecliff-c30465b7.northeurope.azurecontainerapps.io/"
+  "ApiBaseUrl": "https://bitbybit-api.orangecliff-c30465b7.northeurope.azurecontainerapps.io/",
+  "DetailedErrors": true
 }
